--- a/app/src/main/res/layout/failed_payments_card.xml
+++ b/app/src/main/res/layout/failed_payments_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hedvig.app.ui.view.HedvigCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/failedPaymentsCard"
@@ -7,9 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin_double"
-    android:layout_marginEnd="@dimen/base_margin_double"
-    android:visibility="gone"
-    tools:visibility="visible">
+    android:layout_marginEnd="@dimen/base_margin_double">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,4 +34,4 @@
 
     </LinearLayout>
 
-</com.hedvig.app.ui.view.HedvigCardView>
+</com.google.android.material.card.MaterialCardView>
