--- a/app/src/main/res/layout/payment_link.xml
+++ b/app/src/main/res/layout/payment_link.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="?attr/materialButtonTextStyle"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:layout_marginTop="@dimen/base_margin"
-    tools:text="@string/REFERRAL_ADDCOUPON_HEADLINE" />
+    android:layout_marginTop="@dimen/base_margin">
+
+    <Button
+        android:id="@+id/link"
+        style="?attr/materialButtonTextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        tools:text="@string/REFERRAL_ADDCOUPON_HEADLINE" />
+
+</FrameLayout>
