--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -74,6 +74,10 @@
         <item name="android:textColorTertiary">@color/text_color_primary_light</item>
     </style>
 
+    <style name="ThemeOverlay.Hedvig.InsuranceCard.Discount" parent="">
+        <item name="android:textColor">?colorOnPrimary</item>
+    </style>
+
     <style name="ThemeOverlay.Hedvig.Dialog.Alert" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
         <item name="materialAlertDialogBodyTextStyle">?textAppearanceBody1</item>
     </style>
