--- a/app/src/main/res/layout/next_payment_card.xml
+++ b/app/src/main/res/layout/next_payment_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hedvig.app.ui.view.HedvigCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nextPaymentCard"
@@ -122,4 +122,4 @@
 
     </LinearLayout>
 
-</com.hedvig.app.ui.view.HedvigCardView>
+</com.google.android.material.card.MaterialCardView>
