--- a/app/src/main/res/layout/activity_choose_plan.xml
+++ b/app/src/main/res/layout/activity_choose_plan.xml
@@ -25,6 +25,8 @@
         android:clipToPadding="false"
         android:paddingStart="@dimen/base_margin_double"
         android:paddingEnd="@dimen/base_margin_double"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="3"
+        tools:listitem="@layout/plan_card" />
 
 </LinearLayout>
