--- a/app/src/main/res/layout/activity_embark.xml
+++ b/app/src/main/res/layout/activity_embark.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include android:id="@+id/loadingSpinner" layout="@layout/loading_spinner" />
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:navigationIcon="@drawable/ic_back"
+        app:titleTextColor="?colorPrimary" />
+
+    <include
+        android:id="@+id/loadingSpinner"
+        layout="@layout/loading_spinner" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/passageContainer"
