--- a/app/src/main/res/layout/user_id_error.xml
+++ b/app/src/main/res/layout/user_id_error.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/more_options_list_item_height">
 
@@ -29,9 +28,13 @@
         android:id="@+id/memberId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawablePadding="@dimen/base_margin"
+        android:text="@string/embark_onboarding_more_options_loading_error.reload_label"
         android:textAppearance="?textAppearanceBody1"
+        app:drawableEndCompat="@drawable/ic_refresh"
+        app:drawableTint="?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="231491869921" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
