--- a/app/src/main/res/layout/activity_more_options.xml
+++ b/app/src/main/res/layout/activity_more_options.xml
@@ -12,7 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_back"
-        app:title="TODO More options"
+        app:title="@string/embark_onboarding_more_options.screen_title"
         app:titleTextColor="?colorPrimary" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
-        android:text="TODO Already a member? Log in"
+        android:text="@string/embark_onboarding_more_options.log_in_button_text"
         app:layout_constraintBottom_toTopOf="@+id/restart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -49,7 +49,7 @@
         android:layout_marginEnd="@dimen/base_margin_double"
         android:layout_marginBottom="@dimen/base_margin_double"
         android:clipToPadding="false"
-        android:text="TODO Restart the quote"
+        android:text="@string/embark_onboarding_more_options.restart_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
