--- a/app/src/main/res/menu/embark_menu.xml
+++ b/app/src/main/res/menu/embark_menu.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/moreOptions"
         android:icon="@drawable/ic_more"
-        android:title="TODO moreOptions"
-        app:showAsAction="ifRoom" />
+        android:title="@string/embark_onboarding_more_options.screen_title"
+        app:showAsAction="always" />
 </menu>
