--- a/app/src/main/res/layout/more_options_row.xml
+++ b/app/src/main/res/layout/more_options_row.xml
@@ -3,35 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/more_options_list_item_height">
-
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@null"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_contact_information" />
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/more_options_list_item_height">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/label"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/base_margin_double"
-        android:text="TODO User ID"
         android:textAppearance="?textAppearanceSubtitle1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/icon"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/info"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/embark_onboarding_more_options.user_id_label" />
 
     <TextView
-        android:id="@+id/memberId"
-        android:layout_width="wrap_content"
+        android:id="@+id/info"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textAlignment="viewEnd"
         android:textAppearance="?textAppearanceBody1"
+        app:drawableTint="?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/label"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="231491869921" />
 </androidx.constraintlayout.widget.ConstraintLayout>
