--- a/app/src/main/res/layout/payment_redeem_code.xml
+++ b/app/src/main/res/layout/payment_redeem_code.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="?materialButtonTextStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?selectableItemBackground"
     android:paddingStart="@dimen/base_margin_double"
     android:paddingEnd="@dimen/base_margin_double"
-    android:text="@string/REFERRAL_ADDCOUPON_HEADLINE"
     android:textAlignment="viewStart"
-    app:drawableEndCompat="@drawable/ic_add_circle" />
+    app:drawableEndCompat="@drawable/ic_add_circle"
+    tools:text="@string/REFERRAL_ADDCOUPON_HEADLINE" />
